# KeepYourPlantHealthy

./: .gitignore  CMakeLists.txt  Makefile  README.md
Arduino/: .gitignore  KYPH_arduino.ino  KYPH_arduino.sln  KYPH_arduino.vcxproj  KYPH_arduino.vcxproj.filters  Package.cpp  Package.h  PackageSorter.cpp  PackageSorter.h  ProtocolWrapper.cpp  ProtocolWrapper.h  SensorDHT11.cpp  SensorDHT11.h  SensorSoilMoisture.cpp  SensorSoilMoisture.h  SensorUV.cpp  SensorUV.h  SensorWaterFlow.cpp  SensorWaterFlow.h  Sensor_i.cpp  Sensor_i.h  SerialReadHandler.cpp  SerialReadHandler.h
Arduino/__vm/: .Arduino.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Upload.vmps.xml
Arduino/_documentation/: KeepYourPlantHealthy.vpp  KeepYourPlantHealthy.vpp.bak_000f  KeepYourPlantHealthy.vpp.bak_001d  KeepYourPlantHealthy.vpp.bak_002d
CodeCoverage/: .gitignore  ExecuteTest.sh  sftp-config.json
Docs/: KeepYourPlantHealthy.vpp  TOMISAMAZZING.txt
Pi/: .gitignore  CMakeLists.txt  README.md  SQLTruncate.h  sftp-config.json
Pi/include/: ArduinoHandler.h  ConfigureSerialPort.h  KYPHException.hpp  KYPHSensors.h  LocalTime.hpp  MessageDecoder.h  Package.h  PackagesToSQLQuerry.h  ProtocolUnwrapper.h  SQLInsert.h  SQLInterface.h  SQLObject.h  SQLQuery.h  SQLTruncate.h  SQLUpdate.h  SerialDataHandler.h  SerialPort.h  time.hpp
Pi/src/: ArduinoHandler.cpp  CMakeLists.txt  ClearDailyMeasurement.cpp  ConfigureSerialPort.cpp  DailyMeasurement.cpp  KYPHSensors.cpp  KeepYourPlantHealthy.cpp  MessageDecoder.cpp  Package.cpp  PackagesToSQLQuerry.cpp  ProtocolUnwrapper.cpp  SPConfigure.cpp  SQLInsert.cpp  SQLInterface.cpp  SQLObject.cpp  SQLQuery.cpp  SQLTruncate.cpp  SQLUpdate.cpp  SerialDataHandler.cpp  SerialPort.cpp  StoreSensorMeasurement.cpp  UpdateDailyMeasurement.cpp
Pi/test/: CMakeLists.txt  KYPHSensors_test.cpp  ProtocolUnwrapper_test.cpp  SQLQuery_test.cpp  SerialDataHandler_test.cpp  SerialPortMessageDecoder_test.cpp
Web/html/: DailyMeasurement.html  MonthlyMeasurement.html  WeeklyMeasurement.html  index.html
Web/html/css/: DateChanger.css  custom.css  date.css  index.css  tabs.css
Web/html/js/: Button.js  ChartUpdater.js  ContentUpdater.js  DailyChartUpdater.js  Date.js  DateChanger.js  DateUpdater.js  MonthlyChartUpdater.js  PageUpdater.js  Sensor.js  SensorChartUpdater.js  WeeklyChartUpdater.js
Web/html/php/: DailyMeasurement.php  Humidity.php  HumidityDatabase.php  MoistureDatabase.php  SoilMoisture.php  Temperature.php  TemperatureDatabase.php  UV.php  UVDatabase.php  database.php
include/: ConfigureSerialPort.h  MessageDecoder.h  SerialPort.h  SerialPortMessageDecoder.h
src/: CMakeLists.txt  ConfigureSerialPort.cpp  KeepYourPlantHealthy.cpp  MessageDecoder.cpp  SerialPortMessageDecoder.cpp
test/: CMakeLists.txt  SerialPortMessageDecoder_test.cpp
